objects/LLI__c.object
<CustomObject>
    <fields>
        <fullName>About_the_Text__c</fullName>
        <inlineHelpText>Range 0-3
If in Blue level select 0</inlineHelpText>
        <label>About the Text</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLI_Color_System__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accuracy__c</fullName>
        <label>Accuracy</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Beyond_the_Text__c</fullName>
        <inlineHelpText>Range 0-3</inlineHelpText>
        <label>Beyond the Text</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comprehension__c</fullName>
        <formula>IF( 
   ISPICKVAL(LLI_Color_System__c, &quot;Blue&quot;),(converted_comprehension__c &amp; &quot;/&quot; &amp; &quot;6&quot;),(converted_comprehension__c &amp; &quot;/&quot; &amp; &quot;9&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comprehension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fluency__c</fullName>
        <label>Fluency</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLI_Color_System__c</fullName>
        <inlineHelpText>Color Values are Blue, Gold, Purple, Red or Teal</inlineHelpText>
        <label>LLI Color System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Teal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lesson_Number__c</fullName>
        <label>Lesson Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Correction__c</fullName>
        <label>Self Correction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>LLI</relationshipLabel>
        <relationshipName>LLI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sum_of_Comprehension__c</fullName>
        <description>This is the sum of Within the Text, Beyond the Text and About the Text</description>
        <formula>Value(text (Within_the_Text__c)) +Value(text  (Beyond_the_Text__c)) + Value(text  (About_the_Text__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum of Comprehension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Within_the_Text__c</fullName>
        <inlineHelpText>Score range 0-3</inlineHelpText>
        <label>Within the Text</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>converted_comprehension__c</fullName>
        <formula>TEXT( Sum_of_Comprehension__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>converted comprehension</label>
        <type>Text</type>
    </fields>
    <label>LLI</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LLI-{0000}</displayFormat>
        <label>LLI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LLI</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Alpha_Level</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( 
OR( 
ISBLANK(Level__c),REGEX(Level__c ,&quot;([A-Z-])*&quot;)))</errorConditionFormula>
        <errorDisplayField>Level__c</errorDisplayField>
        <errorMessage>Levels must Capital Alpha A-Z</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Color_levels</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(
OR(
ISBLANK(LLI_Color_System__c),REGEX(LLI_Color_System__c ,&quot;([Blue, Gold, Purple, Red,Teal-])*&quot;)))</errorConditionFormula>
        <errorDisplayField>LLI_Color_System__c</errorDisplayField>
        <errorMessage>Color Levels must be one of the following: Bluc, Gold, Purple, Red or Teal</errorMessage>
    </validationRules>
</CustomObject>