objects/LLI__c/validationRules/Alpha_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Alpha_Level</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( 
OR( 
ISBLANK(Level__c),REGEX(Level__c ,&quot;([A-Z-])*&quot;)))</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>Levels must Capital Alpha A-Z</errorMessage>
</ValidationRule>