objects/LLI__c/validationRules/Color_levels.validationRule-meta.xml
<ValidationRule>
    <fullName>Color_levels</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
OR(
ISBLANK(LLI_Color_System__c),REGEX(LLI_Color_System__c ,&quot;([Blue, Gold, Purple, Red,Teal-])*&quot;)))</errorConditionFormula>
    <errorDisplayField>LLI_Color_System__c</errorDisplayField>
    <errorMessage>Color Levels must be one of the following: Bluc, Gold, Purple, Red or Teal</errorMessage>
</ValidationRule>